--- a/MusicPlayer/Spotify/Pages/Items/TrackRow.razor.css
+++ b/MusicPlayer/Spotify/Pages/Items/TrackRow.razor.css
@@ -6,13 +6,14 @@
 .track-entry {
     display: grid;
     grid-template-rows: 56px;
-    grid-template-columns:  16px [first] 4fr [var1] 2fr [last] minmax(120px,1fr);
+    grid-template-columns: 16px [first] 4fr [var1] 2fr [last] minmax(120px,1fr);
     grid-gap: 16px;
     align-items: center;
     padding-left: 16px;
     padding-right: 16px;
     border-radius: 5px;
-    min-width: 380px;
+    min-width: 400px;
+    overflow: hidden;
     font-family: DmSans, sans-serif;
     font-size: 14px;
     background-color: #00000000;
@@ -55,6 +56,7 @@
 
 .album-cover-info {
     display: flex;
+    min-width: 145px;
 }
 
 .album-cover {
@@ -67,24 +69,20 @@
     }
 
 .album-info {
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-right: 8px;
+    max-width: 95%;
+    width: max-content;
+    min-width: 125px;
     transition: 0.5s;
+    overflow: hidden;
 }
 
-    .album-info .album-info-wrapper {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        padding-right: 8px;
-        height: 100%;
-        max-width: 95%;
-        width: max-content;
-        overflow: hidden;
-    }
-
     .album-info span {
-        width: max-content;
         max-width: 100%;
+        width: max-content;
         font-size: 16px;
         color: #ffffff;
         white-space: nowrap;
@@ -93,8 +91,8 @@
     }
 
     .album-info a {
-        width: max-content;
         max-width: 100%;
+        width: max-content;
         font-size: 14px;
         color: #B3B3B3;
         text-decoration: none;
@@ -110,7 +108,7 @@
 .album-name-link {
     display: flex;
     max-width: 95%;
-    width: max-content;
+    min-width: 0;
     overflow: hidden;
     transition: 0.5s;
 }
@@ -134,6 +132,7 @@
     display: flex;
     justify-content: end;
     align-items: center;
+    min-width: 100%;
 }
 
 .like-button {
