--- a/MusicPlayer/Spotify/Pages/PlaylistPage.razor.css
+++ b/MusicPlayer/Spotify/Pages/PlaylistPage.razor.css
@@ -11,13 +11,18 @@
     min-width: 40%;
     width: 100%;
     border-radius: 10px;
-    background-color: #161616;
 }
 
 .playlist-info-area {
     display: flex;
     flex-direction: row;
-    margin: 18px;
+    padding: 24px;
+    padding-top: 0px;
+    height: 30vh;
+    max-height: 400px;
+    min-height: 340px;
+    border-radius: 5px 5px 0 0;
+    background-color: #1a1a1a;
 }
 
 .playlist-info {
@@ -28,6 +33,8 @@
 }
 
 .playlist-cover {
+    display:flex;
+    align-items: flex-end;
     margin-right: 16px;
 }
 
@@ -69,7 +76,7 @@
     align-items: center;
     margin-top: 8px;
     width: max-content;
-    font-family: DmSans Arial, Verdana, Tahoma, sans-serif;
+    font-family: DmSans, sans-serif;
 }
 
 .spotify-logo {
@@ -120,7 +127,6 @@
     flex-direction: row;
     justify-content: space-between;
     padding: 16px;
-    background-color: #1a1a1a;
 }
 
 .controls-left {
@@ -137,7 +143,7 @@
     cursor: pointer;
     font-size: 64px;
     color: #1fa4df;
-    background-color: transparent;
+    background-color: #00000000;
 }
 
     .play-button:hover {
@@ -156,7 +162,7 @@
     cursor: pointer;
     font-size: 32px;
     color: #ffffffb2;
-    background-color: transparent;
+    background-color: #00000000;
 }
 
     .like-button:hover {
@@ -176,7 +182,7 @@
     font-family: DmSans, sans-serif;
     font-size: 24px;
     color: #ffffffb2;
-    background-color: transparent;
+    background-color: #00000000;
 }
 
     .options-button:hover {
@@ -200,7 +206,7 @@
     cursor: pointer;
     font-family: DmSans, sans-serif;
     color: #ffffffb2;
-    background-color: transparent;
+    background-color: #00000000;
 }
 
     .display-mode-button:hover {
@@ -215,9 +221,10 @@
         font-size: 26px;
     }
 
-.track-list {
-    padding: 0 16px;
-    background-color: #1e1e1e;
+
+.track-list-header {
+    margin-bottom: 16px;
+    padding: 0 24px;
 }
 
 .track-info {
@@ -226,6 +233,7 @@
     grid-template-columns: [index] 16px [first] 4fr [var1] 2fr [last] minmax(120px,1fr);
     grid-gap: 16px;
     align-items: center;
+    padding: 0 16px;
     border-bottom: 1px solid hsla(0,0%,100%,.1);
     font-family: DmSans, sans-serif;
     font-size: 14px;
@@ -241,7 +249,8 @@
 }
 
 .track-album {
-    width: max-content;
+    min-width: 0;
+    overflow: hidden;
 }
 
 .track-duration {
@@ -249,4 +258,8 @@
     margin-right: 32px;
     width: max-content;
     font-size: 16px;
+}
+
+.track-list {
+    padding: 0 24px;
 }
