--- a/MusicPlayer/Spotify/Pages/_Layout.cshtml
+++ b/MusicPlayer/Spotify/Pages/_Layout.cshtml
@@ -10,6 +10,11 @@
     <base href="~/" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="Spotify.styles.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,200;9..40,300;9..40,400;9..40,500;9..40,600;9..40,700;9..40,800;9..40,900&display=swap" rel="stylesheet">
+
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
