divs added to track row number

--- a/MusicPlayer/Spotify/Pages/Items/TrackRow.razor
+++ b/MusicPlayer/Spotify/Pages/Items/TrackRow.razor
@@ -1,16 +1,19 @@
 ﻿<div class="track-entry" tabindex="-1">
     <div class="track-number">
-        <p>
-            @Index         <i class="fa-solid fa-play"></i>
-        </p>
+        <div>
+            @Index
+        </div>
+        <div>
+            <i class="fa-solid fa-play"></i>
+        </div>
     </div>
     <div class="album-cover-info">
         <div class="album-cover">
             <img src=@Track.Cover>
         </div>
         <div class="album-info">
-                <span>@Track.Title</span>
-                <a href="#">@Track.Author</a>
+            <span>@Track.Title</span>
+            <a href="#">@Track.Author</a>
         </div>
     </div>
     <div class="album-name-link">
