some width selectors added and hover colors changed

--- a/MusicPlayer/Spotify/Pages/Items/TrackRow.razor
+++ b/MusicPlayer/Spotify/Pages/Items/TrackRow.razor
@@ -1,9 +1,9 @@
 ﻿<div class="track-entry" tabindex="-1">
     <div class="track-number">
-        <div>
+        <div class="track-number-index">
             @Index
         </div>
-        <div>
+        <div class="track-number-icon">
             <i class="fa-solid fa-play"></i>
         </div>
     </div>
