--- a/MusicPlayer/Spotify/Pages/Items/SidePlaylist.razor.css
+++ b/MusicPlayer/Spotify/Pages/Items/SidePlaylist.razor.css
@@ -5,7 +5,7 @@
     padding: 7px;
     display: flex;
     align-items: center;
-    /*min-width: 130px;*/
+    min-width: 50px;
 }
 
     .playlist:hover {
