--- a/MusicPlayer/Spotify/Shared/MainLayout.razor.css
+++ b/MusicPlayer/Spotify/Shared/MainLayout.razor.css
@@ -67,11 +67,12 @@
 
 .main-area {
     flex: 1;
-    padding: 15px;
+    /*padding: 15px;*/
 }
 
 ::-webkit-scrollbar {
     width: 10px;
+    /*display: none;*/
 }
 
 ::-webkit-scrollbar-thumb {
@@ -89,4 +90,3 @@
     inherits: true;
     initial-value: transparent;
 }
-
