header name changed to topbar

--- a/MusicPlayer/Spotify/Shared/MainLayout.razor
+++ b/MusicPlayer/Spotify/Shared/MainLayout.razor
@@ -31,7 +31,7 @@
             <div @ref=Resizer class="resizer"></div>
 
             <div @ref=MainPanel class="main-area">
-                <Header></Header>
+                <Topbar></Topbar>
                 @Body
             </div>
 
