--- a/MusicPlayer/Spotify/Pages/AlbumPage.razor
+++ b/MusicPlayer/Spotify/Pages/AlbumPage.razor
@@ -1,19 +1,19 @@
-﻿@page "/playlist/{Id:guid}"
+﻿@page "/album/{Id:guid}"
 
 <div class="page-wrapper">
     <div class="playlist-info-area">
         <div class="playlist-cover">
-            <img src=@Playlist.Image>
+            <img src=@Album.Image>
         </div>
         <div class="playlist-info">
             <div class="playlist-type">
                 <span>Playlist</span>
             </div>
             <div class="playlist-name">
-                <h1>@Playlist.Title</h1>
+                <h1>@Album.Title</h1>
             </div>
             <div class="playlist-authors">
-                @Playlist.Author.Name
+                @Album.Author.Name
             </div>
             <div class="playlist-duration">
                 <div class="spotify-logo">
@@ -58,7 +58,7 @@
         </div>
     </div>
     <div class="track-list">
-        @foreach (var track in Playlist.TrackList)
+        @foreach (var track in Album.TrackList)
         {
             <TrackRow Index="songNumber" Track="track"></TrackRow>
             songNumber++;
@@ -70,11 +70,11 @@
     [Parameter]
     public Guid Id { get; set; }
 
-    public PlaylistModel Playlist { get; set; }
+    public AlbumModel Album { get; set; }
 
     protected override void OnInitialized()
     {
-        Playlist = DataBaseMoq.Playlists.First(p => p.Id == Id);
+        Album = DataBaseMoq.Albums.First(p => p.Id == Id);
     }
 
     int songNumber = 1;
