--- a/MusicPlayer/Spotify/Pages/Items/TrackRow.razor
+++ b/MusicPlayer/Spotify/Pages/Items/TrackRow.razor
@@ -13,7 +13,7 @@
         </div>
         <div class="album-info">
             <span>@Track.Title</span>
-            <a href="#">@Track.Author</a>
+            <a href="#">@Track.Author.Name</a>
         </div>
     </div>
     <div class="album-name-link">
