--- a/MusicPlayer/Spotify/Shared/MainLayout.razor
+++ b/MusicPlayer/Spotify/Shared/MainLayout.razor
@@ -51,6 +51,7 @@
     IJSObjectReference? jsModule;
     List<TrackModel>? Tracks { get; set; }
     public List<PlaylistModel>? Playlists { get; set; }
+    public List<AuthorModel>? Authors { get; set; }
 
     ElementReference Resizer;
     ElementReference Sidebar;
