--- a/MusicPlayer/Spotify/App.razor
+++ b/MusicPlayer/Spotify/App.razor
@@ -6,13 +6,15 @@
     <base href="/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
+    <link href="Spotify.styles.css" rel="stylesheet" />
     <link href="BlazorMigrationDemo.styles.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <HeadOutlet />
+    <HeadOutlet @rendermode="@RenderMode.InteractiveServer" />
 </head>
 
 <body>
-    <Routes />
+    @* <Routes @rendermode="@RenderMode.InteractiveServer"/> *@
+    <Routes @rendermode="@(new InteractiveServerRenderMode(false))" />
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
