some comments to fix errors from new models

--- a/MusicPlayer/Spotify/Pages/Items/PlaylistCard.razor
+++ b/MusicPlayer/Spotify/Pages/Items/PlaylistCard.razor
@@ -12,7 +12,7 @@
     <div class="description-area">
         <a class="title" href="#">@Playlist.Title</a>
         <div class="author-area">
-            <a class="author" href="#">@Playlist.Author</a>
+            <a class="author" href="#">@* @Playlist.Author *@</a>
             @* @Playlist.Author *@
         </div>
     </div>
