--- a/MusicPlayer/Spotify/Pages/Items/SidePlaylist.razor
+++ b/MusicPlayer/Spotify/Pages/Items/SidePlaylist.razor
@@ -8,7 +8,7 @@
         </div>
         <div class="author-area">
             <i class="ph-fill ph-push-pin"></i>
-            <p class="author">@Playlist.Author</p>
+            <p class="author">@* @Playlist.Author *@</p>
         </div>
     </div>
 </div>
