--- a/MusicPlayer/Spotify/Shared/Trackbar.razor
+++ b/MusicPlayer/Spotify/Shared/Trackbar.razor
@@ -4,7 +4,7 @@
 <div class="trackbar">
     <div class="track-area">
         <div class="track-image">
-            <img src="@Track.Image" />
+            <img @* src="@Track.Image" *@ />
         </div>
         <div @ref=Info class="track-info">
             <div class="track-title">
