--- a/MusicPlayer/Spotify/Pages/Index.razor
+++ b/MusicPlayer/Spotify/Pages/Index.razor
@@ -15,11 +15,11 @@
 <div class="tracks-area">
     <div class="albums-area">
         <a>Albums</a>
-        @if (Albums is not null)
+        @if (Layout.Albums is not null)
         {
             //for (int i = 0; i < 10; i++)
             //{
-                @foreach (var album in Albums)
+            @foreach (var album in Layout.Albums)
                 {
                     <AlbumCard Album="album"></AlbumCard>
                 }
@@ -30,13 +30,13 @@
         }*@
         }
     </div>
-    <div class=".playlist-area">
+    <div class="playlist-area">
         <a>Playlists</a>
-        @if (Playlists is not null)
+        @if (Layout.Playlists is not null)
         {
            // for (int i = 0; i < 10; i++)
             //{
-                @foreach (var playlist in Playlists)
+            @foreach (var playlist in Layout.Playlists)
                 {
                     <PlaylistCard Playlist="playlist"></PlaylistCard>
                 }
@@ -54,10 +54,7 @@
 {
     //List<TrackModel>? Tracks { get; set; }
     [CascadingParameter]
-    public List<PlaylistModel> Playlists { get; set; }
-
-    [CascadingParameter]
-    public List<AlbumModel> Albums { get; set; }
+    public MainLayout Layout { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
