--- a/MusicPlayer/Spotify/Pages/Index.razor.css
+++ b/MusicPlayer/Spotify/Pages/Index.razor.css
@@ -1,7 +1,7 @@
 ﻿.tracks-area {
     background: #121212;
-    display: flex;
-    flex-wrap: wrap;
+/*    display: flex;
+    flex-wrap: wrap;*/
 }
 
     .tracks-area a {
